--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html><head><link rel="stylesheet" href="index.css"><script src="SimpleDialogs.js"></script></head><body><header><h1><a href="https://github.com/sparklinlabs">sparklinlabs</a> / <a href="https://github.com/sparklinlabs/simple-dialogs">simple-dialogs</a></h1><p>Non-blocking HTML5 dialogs</p></header><main><button class="confirm">Confirm</button><button class="info">Info</button><button class="prompt">Prompt</button><button class="select">Select</button></main><script>var confirmElt = document.querySelector("button.confirm");
 confirmElt.addEventListener("click", function() {
   var confirmOptions = {
+    header: "Weather postcast",
     validationLabel: "Yes",
     cancelLabel: "No"
   }
@@ -10,6 +11,7 @@ confirmElt.addEventListener("click", function() {
 var infoElt = document.querySelector("button.info");
 infoElt.addEventListener("click", function() {
   var infoOptions = {
+    header: "Compliment dispenser",
     closeLabel: "Thanks! You too!"
   }
   new SimpleDialogs.InfoDialog("You look stunning today!", infoOptions, function(result) { console.log(result); })
@@ -18,6 +20,7 @@ infoElt.addEventListener("click", function() {
 var promptElt = document.querySelector("button.prompt");
 promptElt.addEventListener("click", function() {
   var promptOptions = {
+    header: "Accounting",
     validationLabel: "There you go",
     cancelLabel: "Not your concern"
   }
@@ -33,7 +36,8 @@ selectElt.addEventListener("click", function() {
     "tooMuch": "Wayyyy too much!"
   }
   var selectOptions = {
-    size: 3
+    header: "Enjoyment rating",
+    size: 4
   }
   new SimpleDialogs.SelectDialog("How much fun did I have building this demo?", selectChoices, selectOptions, function(result) { console.log(result); })
 })</script></body></html>
