--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html><html><head><link rel="stylesheet" href="index.css"><script src="SimpleDialogs.js"></script></head><body><header><h1><a href="https://github.com/sparklinlabs">sparklinlabs</a> / <a href="https://github.com/sparklinlabs/simple-dialogs">simple-dialogs</a></h1><p>Non-blocking HTML5 dialogs</p></header><main><button class="confirm">Confirm</button><button class="info">Info</button><button class="prompt">Prompt</button><button class="select">Select</button></main><script>var confirmElt = document.querySelector("button.confirm");
-confirmElt.addEventListener("click", function() {
+<!DOCTYPE html><html><head><link rel="stylesheet" href="index.css"><script src="SimpleDialogs.js"></script></head><body><header><h1><a href="https://github.com/sparklinlabs">sparklinlabs</a> / <a href="https://github.com/sparklinlabs/simple-dialogs">simple-dialogs</a></h1><p>Non-blocking HTML5 dialogs</p></header><main><button title="Ctrl+Q" class="confirm">Confirm</button><button class="info">Info</button><button class="prompt">Prompt</button><button class="select">Select</button><textarea></textarea></main><script>var confirmElt = document.querySelector("button.confirm");
+confirmElt.addEventListener("click", confirm);
+
+function confirm() {
   var confirmOptions = {
     header: "Weather postcast",
     validationLabel: "Yes",
     cancelLabel: "No"
   }
   new SimpleDialogs.ConfirmDialog("Is it rainy today?", confirmOptions, function(result) { console.log(result); })
-})
+}
 
 var infoElt = document.querySelector("button.info");
 infoElt.addEventListener("click", function() {
@@ -40,4 +42,8 @@ selectElt.addEventListener("click", function() {
     size: 4
   }
   new SimpleDialogs.SelectDialog("How much fun did I have building this demo?", selectChoices, selectOptions, function(result) { console.log(result); })
+})
+
+document.addEventListener("keydown", function(event) {
+  if (event.keyCode === 81 && event.ctrlKey) confirm();
 })</script></body></html>
